codepkg/objects/HH_Application__c.object
<CustomObject>
    <description>Application Object for Home Hardening Application.</description>
    <fields>
        <fullName>Accessible_by_a_Passenger_Vehicle__c</fullName>
        <description>Is the property currently accessible by a standard passenger vehicle?</description>
        <inlineHelpText>Is the property currently accessible by a standard passenger vehicle?</inlineHelpText>
        <label>Accessible by a Passenger Vehicle?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this box, I knowledge that I HAVE READ AND AGREE to the disclosure and consent above.</description>
        <inlineHelpText>By checking this box, I knowledge that I HAVE READ AND AGREE to the disclosure and consent above.</inlineHelpText>
        <label>Agreement Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Other_Names_on_the_Property_Deed__c</fullName>
        <description>Are there any other names on the deed for the property?</description>
        <inlineHelpText>Are there any other names on the deed for the property?</inlineHelpText>
        <label>Any Other Names on the Property Deed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anyone_Not_a_Proficient_English_Speaker__c</fullName>
        <description>Is anyone in the household not a proficient English speaker?</description>
        <inlineHelpText>Is anyone in the household not a proficient English speaker?</inlineHelpText>
        <label>Anyone Not a Proficient English Speaker?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <description>First Name of Applicant</description>
        <formula>Applicant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Name of Applicant</inlineHelpText>
        <label>Applicant First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <description>Last Name of Applicant</description>
        <formula>Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last Name of Applicant</inlineHelpText>
        <label>Applicant Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>HH_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_s_Name__c</fullName>
        <description>The applicant&apos;s full name as submitted on the application</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The applicant&apos;s full name as submitted on the application</inlineHelpText>
        <label>Applicant&apos;s Full Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_s_Preferred_Language__c</fullName>
        <description>What is your preferred language?</description>
        <formula>TEXT( Applicant__r.Preferred_Language__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is your preferred language?</inlineHelpText>
        <label>Applicant&apos;s Preferred Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Duration_Cycle__c</fullName>
        <formula>Submission_Date__c - User_Registration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Duration Cycle(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Lead_Name__c</fullName>
        <formula>Application_Lead__r.FirstName +&apos; &apos;+ Application_Lead__r.LastName</formula>
        <label>Application Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CWMP_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessed_Value_of_the_Property__c</fullName>
        <description>What is the current assessed value of the property?</description>
        <inlineHelpText>What is the current assessed value of the property?</inlineHelpText>
        <label>Assessed Value of the Property?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Approver_s_Email__c</fullName>
        <description>Community User who approved the application for Cal OES review upon assessment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Community User who approved the application for Cal OES review upon assessment.</inlineHelpText>
        <label>Assessment Approver&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assessment_Rejection_Reason__c</fullName>
        <description>Application Rejection reason for Assessment</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Application Rejection reason for Assessment</inlineHelpText>
        <label>Assessment Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessor_Email__c</fullName>
        <description>Assessor&apos;s Email</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Assessor&apos;s Email</inlineHelpText>
        <label>Assessor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistance_to_reduce_yo__c</fullName>
        <description>Have you received assistance from any program to reduce your home&apos;s risk to wildfire PRIOR to this application?</description>
        <inlineHelpText>Have you received assistance from any program to reduce your home&apos;s risk to wildfire PRIOR to this application?</inlineHelpText>
        <label>Assistance for Home&apos;s risk to wildfire?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authority_to_make_updates_to_the_Home__c</fullName>
        <description>Do you have the authority to make any updates to the home, substantial or not?</description>
        <inlineHelpText>Do you have the authority to make any updates to the home, substantial or not?</inlineHelpText>
        <label>Authority to Make Updates to the Home?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CWMP_MainPortal_URL__c</fullName>
        <formula>$Label.CalOES_Main_Portal_Base_URL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CWMP-MainPortal-URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_OES_Approver_s_Email__c</fullName>
        <description>Cal OES User who approved the application for FEMA review.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Cal OES User who approved the application for FEMA review.</inlineHelpText>
        <label>Cal OES Approver&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cal_OES_Rejection_Reason__c</fullName>
        <description>Application Rejection reason from Cal OES</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Application Rejection reason from Cal OES</inlineHelpText>
        <label>Cal OES Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Car_Ownership__c</fullName>
        <description>Do the current residents occupying the property own a car?</description>
        <inlineHelpText>Do the current residents occupying the property own a car?</inlineHelpText>
        <label>Car Ownership?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of property</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City of property.</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Approver_s_Email__c</fullName>
        <description>Community User who approved the application for assessment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Community User who approved the application for assessment.</inlineHelpText>
        <label>Community Approver&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Community_County_Queue_Email__c</fullName>
        <description>Email of the community County Queue.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email of the community County Queue.</inlineHelpText>
        <label>Community County Queue Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Community_Rejection_Reason__c</fullName>
        <description>Application Rejection reason from Community</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Application Rejection reason from Community</inlineHelpText>
        <label>Community Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <description>Country/Region of property</description>
        <inlineHelpText>Country/Region of property</inlineHelpText>
        <label>Country/Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County of Property</description>
        <inlineHelpText>County of Property</inlineHelpText>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Shasta</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                    <isActive>false</isActive>
                    <label>Los Angeles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Mortgaged__c</fullName>
        <description>Is the property currently mortgaged?</description>
        <inlineHelpText>Is the property currently mortgaged?</inlineHelpText>
        <label>Currently Mortgaged?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Occupied__c</fullName>
        <description>Is the rental property currently occupied?</description>
        <inlineHelpText>Is the rental property currently occupied?</inlineHelpText>
        <label>Currently Occupied?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damage_Description__c</fullName>
        <description>Describe the damages.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the damages.</inlineHelpText>
        <label>Damage Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_you_receive_wildfire_assistance__c</fullName>
        <description>Did you receive any assistance from any program to take those measures?</description>
        <inlineHelpText>Did you receive any assistance from any program to take those measures?</inlineHelpText>
        <label>Did you receive wildfire assistance?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Applicant/Homeowner Email Address</description>
        <formula>Applicant__r.Email</formula>
        <inlineHelpText>Applicant/Homeowner Email Address</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Language_Proficiency_Level__c</fullName>
        <description>How well does the applicant speak English?</description>
        <formula>TEXT( Applicant__r.English_Language_Proficiency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How well does the applicant speak English?</inlineHelpText>
        <label>English Language Proficiency Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicities_of_Household_Members__c</fullName>
        <description>What are the Ethnicities of household members?</description>
        <inlineHelpText>What are the Ethnicities of household members?</inlineHelpText>
        <label>Ethnicities of Household Members</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian or Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Black, Not of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Multi-Racial</fullName>
                </value>
                <value>
                    <fullName>White, Not of Hispanic Origin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                    <isActive>false</isActive>
                    <label>Black</label>
                </value>
                <value>
                    <fullName>Not of Hispanic Origin</fullName>
                    <isActive>false</isActive>
                    <label>Not of Hispanic Origin</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <isActive>false</isActive>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEMA_Rejection_Reason__c</fullName>
        <description>Application Rejection reason from FEMA</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Application Rejection reason from FEMA</inlineHelpText>
        <label>FEMA Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Good_Standing_with_a_payment_plan_on_you__c</fullName>
        <description>Are you current or in good standing with a payment plan on your property taxes?</description>
        <inlineHelpText>Are you current or in good standing with a payment plan on your property taxes?</inlineHelpText>
        <label>Good Standing on Property Taxes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Community_URL__c</fullName>
        <description>Main Portal URL</description>
        <formula>$Label.HH_Community_BaseURL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HH Community URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Members__c</fullName>
        <description>Total number of household members?</description>
        <inlineHelpText>Total number of household members?</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Bracket__c</fullName>
        <description>What area median income bracket does the Homeowner&apos;s household fall into?</description>
        <inlineHelpText>What area median income bracket does the Homeowner&apos;s household fall into?</inlineHelpText>
        <label>Homeowner&apos;s Income Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 80%</fullName>
                </value>
                <value>
                    <fullName>80% through 120%</fullName>
                </value>
                <value>
                    <fullName>Above 120% to 200%</fullName>
                </value>
                <value>
                    <fullName>Greater than 200%</fullName>
                </value>
                <value>
                    <fullName>120-200% AMI</fullName>
                    <isActive>false</isActive>
                    <label>120-200% AMI</label>
                </value>
                <value>
                    <fullName>&lt; 120% AMI</fullName>
                    <isActive>false</isActive>
                    <label>&lt; 120% AMI</label>
                </value>
                <value>
                    <fullName>&lt; 80%</fullName>
                    <isActive>false</isActive>
                    <label>&lt; 80%</label>
                </value>
                <value>
                    <fullName>&gt; 200% AMI</fullName>
                    <isActive>false</isActive>
                    <label>&gt; 200% AMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Any_Open_RFI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check any related RFI is open or not</description>
        <label>RFI Pending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Anyone_65__c</fullName>
        <description>Is anyone in the household age 65 or Older?</description>
        <inlineHelpText>Is anyone in the household age 65 or Older?</inlineHelpText>
        <label>Is Anyone Age 65 or Older?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Anyone_Age_5_and_Under__c</fullName>
        <description>Is anyone in the household age 5 or younger?</description>
        <inlineHelpText>Is anyone in the household age 5 or younger?</inlineHelpText>
        <label>Is Anyone Age 5 or under?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Anyone_has_Disabilities__c</fullName>
        <description>Is anyone in the household a person with disabilities?
Disability Definition: A physical or mental impairment that substantially limits one or more major life activities; a record of such an impairment; or being regarded as having such an impairment. (Regardless if the person is  receiving SSI disability or not.)</description>
        <inlineHelpText>Is anyone in the household a person with disabilities?
Disability Definition: A physical or mental impairment that substantially limits one or more major life activities; a record of such an impairment; or being regarded as having such an impairment. (Regardless if the person is  receiving SSI disability or not.)</inlineHelpText>
        <label>Does Anyone Have a Disability?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_National_Register_of_Historic_Places__c</fullName>
        <description>Is the house you wish to retrofit registered in the National Register of Historic Places?</description>
        <inlineHelpText>Is the house you wish to retrofit registered in the National Register of Historic Places?</inlineHelpText>
        <label>On National Register of Historic Places?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Physical_Address_a_Foreign_Address__c</fullName>
        <description>Is Physical Address a Foreign Address?</description>
        <formula>TEXT(Applicant__r.Is_Physical_Address_a_Foreign_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Physical Address a Foreign Address?</inlineHelpText>
        <label>Is Physical Address a Foreign Address?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_property_in_the_floodplain__c</fullName>
        <description>Is property in the 100-yr floodplain?</description>
        <inlineHelpText>Is property in the 100-yr floodplain?</inlineHelpText>
        <label>Is property in the 100-yr floodplain?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_mailing_address_a_foreign_addres__c</fullName>
        <description>Is Mailing Address a Foreign Address?</description>
        <formula>TEXT( Applicant__r.Is_Mailing_Address_a_Foreign_Address__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Mailing Address a Foreign Address?</inlineHelpText>
        <label>Is Mailing Address a Foreign Address?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_your_mailing_address_different__c</fullName>
        <description>Is your Mailing Address different from your Physical Address?</description>
        <formula>TEXT(  Applicant__r.Is_Mailing_Address_Different__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is your Mailing Address different from your Physical Address?</inlineHelpText>
        <label>Is Mailing Address Different?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Measures__c</fullName>
        <description>List All Measures taken to reduce property risks to wildfire damage.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List All Measures taken to reduce property risks to wildfire damage.</inlineHelpText>
        <label>List of Measures</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>Mailing Address</description>
        <formula>Applicant__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mailing Address</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>Mailing City</description>
        <formula>Applicant__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mailing City</inlineHelpText>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Region__c</fullName>
        <description>Mailing Country/Region</description>
        <formula>Applicant__r.MailingCountry</formula>
        <inlineHelpText>Mailing Country/Region</inlineHelpText>
        <label>Mailing Country/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <description>Mailing State/province</description>
        <formula>Applicant__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mailing State/province</inlineHelpText>
        <label>Mailing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <description>Mailing Zip/Postal code</description>
        <formula>Applicant__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mailing Zip/Postal code</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measures_to_Reduce_risks_to_wi__c</fullName>
        <description>Have you taken any measures to reduce property risks to wildfire damage?</description>
        <inlineHelpText>Have you taken any measures to reduce property risks to wildfire damage?</inlineHelpText>
        <label>Measures to Reduce Wildfire Damage Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of stories in the structure.</description>
        <inlineHelpText>Number of stories in the structure.</inlineHelpText>
        <label>Number of Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Structure_Type__c</fullName>
        <description>If the Property Structure type is selected as &quot;Other&quot;?</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the Property Structure type is selected as &quot;Other&quot;?</inlineHelpText>
        <label>Other Structure Type - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>To Capture Owner Name for History tracking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <description>Physical Address</description>
        <formula>Applicant__r.Physical_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical Address</inlineHelpText>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <description>Physical City</description>
        <formula>Applicant__r.Physical_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical City</inlineHelpText>
        <label>Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country_Region__c</fullName>
        <description>Physical Country/Region</description>
        <formula>Applicant__r.Physical_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical Country/Region</inlineHelpText>
        <label>Physical Country/Region</label>
        <type>Text</type>
    </fields>
</CustomObject>